# Difference-Calculator

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python_test_and_linter.yml
gendiff/: constructor_diff.py  generate_diff.py  parser.py  parsing.py
gendiff/formatters/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py  test_json_diff.py  test_plain_diff.py  test_stylish_diff.py
tests/fixtures/: file3.yaml  file4.yaml  file5.json  file6.json  result_half_empty.txt  result_yaml_stylish.txt
work_directory/scripts/: gendiff.py
