[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Евгений <prokofev_619@mail.ru>"]
readme = "README.md"
packages = [{include = "work_directory"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "work_directory.scripts.gendiff:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
