[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "App compares two files (JSON or YAML) and shows the difference between them."
authors = ["Евгений <prokofev_619@mail.ru>"]
readme = "README.md"
packages = [{include = "gendiff"}]
classifiers = [
    "Programming Language :: Python :: ^3.10",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Intended Audience :: Education",
    "Operating System :: Unix",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
